added career section

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "Ansari",
         "Ibtesam",
+        "Langchain",
         "PROPERTYLOOP",
         "SHADCN",
         "turbopack"
